# input_generator

./: README.md  pyproject.toml
input_generator/: app.py  utils.py
input_generator/generator/: cmd.py  generator.py  int.py  permutation.py  pyfile.py  string.py
input_generator/subcommands/: file.py  permutation.py  string.py
