[tool.poetry]
name = "input-generator"
version = "0.1.0"
description = ""
authors = ["kosei <kosei.iidx@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ingen = "input_generator.app:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.10.0"}


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.10.1"
python-lsp-ruff = "^2.2.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
